fix: improving Dashboard Category spacing on mobile
Also fixing Dashboard actions panel size and spacing on mobile

--- a/modules/ept-frontend/client/scss/ept/views/public/_boards.scss
+++ b/modules/ept-frontend/client/scss/ept/views/public/_boards.scss
@@ -120,10 +120,17 @@
 .dashboard-actions {
   display: flex;
   justify-content: center;
+  margin-bottom: 2rem;
 
   .button {
     margin: 0 1rem;
     min-width: 160px;
+  }
+
+  @include break-mobile-sm {
+    .button {
+      font-size: $font-size-sm;
+    }
   }
 }
 
@@ -202,7 +209,7 @@
 }
 
 .category {
-  @include row;
+  // @include row;
   // border-top: $border;
   margin-bottom: 0.875rem;
   padding-top: 0.375rem;
@@ -362,6 +369,10 @@
           }
         }
       }
+  }
+
+  @include break-mobile-sm {
+    margin: 0 1rem 0 1.75rem;
   }
 }
 
